1999-02-25  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-om.el (find-file-noselect-as-raw-text-CRLF): New function.
	It is an alias for `find-file-noselect-as-raw-text'.
	(insert-file-contents-as-raw-text-CRLF): New function.
	It is an alias for `insert-file-contents-as-raw-text'.

	* poem-nemacs.el (find-file-noselect-as-raw-text-CRLF): New
	function. It is an alias for `find-file-noselect-as-raw-text'.
	(find-file-noselect-as-raw-text): Convert line-break code from
	CRLF to LF.
	(insert-file-contents-as-raw-text-CRLF): New function. It is an
	alias for `insert-file-contents-as-raw-text'.
	(insert-file-contents-as-raw-text): Convert line-break code from
	CRLF to LF.
	(find-file-noselect-as-binary): Don't specify the optional third
	argument `rawfile' for `find-file-noselect'.

	* poem-ltn1.el (find-file-noselect-as-raw-text-CRLF): New function.
	It is an alias for `find-file-noselect'.
	(insert-file-contents-as-raw-text-CRLF): New function. It is an
	alias for `insert-file-contents'.

	* poem-20.el, poem-e20_2.el (find-file-noselect-as-raw-text-CRLF):
	New function.
	(insert-file-contents-as-raw-text-CRLF): New function.

1999-02-25  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-20.el, poem-e20_2.el, poem-om.el
	(find-file-noselect-as-raw-text): Undo the last change.
	(insert-file-contents-as-raw-text): Likewise.

1999-02-25  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-20.el, poem-e20_2.el, poem-om.el
	(find-file-noselect-as-raw-text): Use `raw-text-dos' instead of
	`raw-text'.
	(insert-file-contents-as-raw-text): Likewise.

1999-02-14  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mcs-om.el (TopLevel): Don't refer to
	`running-emacs-19_29-or-later', use `emacs-major-version' and
	`emacs-minor-version' instead.

1999-02-14  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el (file-name-sans-extension): New function <copied from
	Emacs 20.3.5> <cf. [tm-ja:4135]>.

1999-02-04  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poem-20.el, poem-ltn1.el, poem-nemacs.el, poem-om.el